<resources>

    <!-- 카테고리 -->
    <string name="category_fiction">소설</string>
    <string name="category_cooking">요리</string>
    <string name="category_science">과학</string>
    <string name="category_health">건강</string>
    <string name="category_hiandsoc">역사/문화</string>
    <string name="category_travel">여행</string>
    <string name="category_buandec">경제/경영</string>
    <string name="category_crandhoandfi">취미/실용/스포츠</string>
    <string name="category_teanden">기술/공학</string>
    <string name="category_religion">종교</string>
    <string name="category_poandli">시/에세이</string>
    <string name="category_artandper">예술/대중문화</string>
    <string name="category_hoandho">가정/육아</string>
    <string name="category_computer">컴퓨터/IT</string>
    <string name="category_human">인문</string>
    <string name="category_selfhelf">자기계발</string>
    <string name="category_poandso">정치/사회</string>
    <string name="category_foreign">외국어</string>

    <!-- 앱 -->
    <string name="app_name">FinalProject</string>

    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="next">다음</string>
    <string name="join_toolbar_title">회원 정보를 입력해주세요</string>
    <string name="nick_name">닉네임</string>
    <string name="age">나이</string>
    <string name="gender">성별</string>
    <string name="join_category_toolbar_title">관심 분야를 선택해주세요</string>
    <string name="category_toolbar_title">카테고리</string>
    <string name="join_finish">회원가입 완료</string>


    <string name="my_page_nickname">%1$s님</string>
    <string name="my_page_point">%1$sP</string>
    <string name="order_list_title">%1$s 외 %2$d건</string>
    <string name="order_list_content">총 %1$d종 %2$d권 외 %3$s</string>


    <string name="today_attendance">오늘의 출석체크</string>
    <string name="everyday_100">출석체크 시 매일 100원</string>
    <string name="today_check">오늘 출석하기</string>
    <string name="book_introduce">책소개</string>
    <string name="book_info">%1$s 저 | %2$s | %3$s</string>
    <string name="point">%1$s (5%% 적립)</string>
    <string name="shopping_cart_toolbar_title">장바구니</string>
    <string name="order">주문하기</string>
    <string name="point_in_shopping_cart">(%1$s)</string>
    <string name="total_count">총 %1$s개</string>

    <string name="gift_card_main_title">%1$s님의 선물카드</string>
    <string name="gift_card_title">%1$s %2$s님의 선물카드</string>
    <string name="search_total_count">총 %1$s건</string>
    <string name="order_detail_info">%1$s 주문 (주문번호 %2$d)</string>
    <string name="order_detail_price_quantity">%1$s\t\t%2$d개</string>
</resources>