<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.category.CategoryFragment">

    <ImageView
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/title_bar_bg"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:paddingStart="24dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_toolbar_title"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:layout_marginVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_fiction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_fiction"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_artandper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_artandper"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fiction" />

    <TextView
        android:id="@+id/tv_teanden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_teanden"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_artandper" />

    <TextView
        android:id="@+id/tv_foreign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_foreign"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_teanden" />

    <TextView
        android:id="@+id/tv_crandhoandfi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_crandhoandfi"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_foreign" />

    <TextView
        android:id="@+id/tv_self_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_selfhelf"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_crandhoandfi" />

    <TextView
        android:id="@+id/tv_poandli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_poandli"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_fiction" />

    <TextView
        android:id="@+id/tv_hoandho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_hoandho"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_poandli"
        app:layout_constraintTop_toBottomOf="@id/tv_fiction" />

    <TextView
        android:id="@+id/tv_cooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_cooking"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_poandli"
        app:layout_constraintTop_toBottomOf="@id/tv_artandper" />

    <TextView
        android:id="@+id/tv_science"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_science"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_poandli"
        app:layout_constraintTop_toBottomOf="@id/tv_teanden" />

    <TextView
        android:id="@+id/tv_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_travel"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_poandli"
        app:layout_constraintTop_toBottomOf="@id/tv_foreign" />

    <TextView
        android:id="@+id/tv_buandec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_buandec"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_poandli"
        app:layout_constraintTop_toBottomOf="@id/tv_crandhoandfi" />

    <TextView
        android:id="@+id/tv_religion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_religion"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_fiction" />

    <TextView
        android:id="@+id/tv_human"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_human"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_religion"
        app:layout_constraintTop_toBottomOf="@id/tv_fiction" />

    <TextView
        android:id="@+id/tv_hiandsoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_hiandsoc"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_religion"
        app:layout_constraintTop_toBottomOf="@id/tv_artandper" />

    <TextView
        android:id="@+id/tv_poandso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_poandso"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_religion"
        app:layout_constraintTop_toBottomOf="@id/tv_teanden" />

    <TextView
        android:id="@+id/tv_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_health"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_religion"
        app:layout_constraintTop_toBottomOf="@id/tv_foreign" />

    <TextView
        android:id="@+id/tv_computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/category_computer"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_religion"
        app:layout_constraintTop_toBottomOf="@id/tv_crandhoandfi" />

</androidx.constraintlayout.widget.ConstraintLayout>